Minor style fix: remove explicit vertical scrollbar.
Former-commit-id: 229ec47687c0fe5efcc6c5717ff0e35c3d557b80

--- a/blocks/diff/_diff_doublepane.scss
+++ b/blocks/diff/_diff_doublepane.scss
@@ -20,6 +20,7 @@
 .diff__split {
   float: left;
   height: 100%;
+  overflow: hidden;
   position: relative;
   width: 6%;
 }
